--- a/day_2_numpy_(2).ipynb
+++ b/day_2_numpy_(2).ipynb
@@ -472,7 +472,8 @@
         "print(a.itemsize)\n",
         "print(a.nbytes)\n",
         "print(a[1,1:3:1])\n",
-        "print(a[0,1:3:1])\n"
+        "print(a[0,1:3:1])\n",
+        "\n"
       ],
       "metadata": {
         "colab": {
@@ -498,6 +499,43 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a= np.array([[2,3,4],[5,6,8],[8,10,9]])\n",
+        "print(a)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "5xe9dMsf_3u7",
+        "outputId": "f4afa049-94d4-4071-ed90-a5b53fc3acb1"
+      },
+      "id": "5xe9dMsf_3u7",
+      "execution_count": 59,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[ 2  3  4]\n",
+            " [ 5  6  8]\n",
+            " [ 8 10  9]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "vQUOECLuCyJn"
+      },
+      "id": "vQUOECLuCyJn",
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
